# cpp-misc

./: .gitignore  .gitmodules  Readme.md
ComOutOfProcessRegFree/: ComOutOfProcessRegFree.sln  Readme.md
ComOutOfProcessRegFree/Consumer/: Consumer.vcxproj  Consumer.vcxproj.filters  Manifest.xml  app.cpp  com_environment.h  imports.h
ComOutOfProcessRegFree/Producer/: Field.cpp  Field.h  Field.rgs  Manifest.xml  Producer.cpp  Producer.idl  Producer.rc  Producer.vcxproj  Producer.vcxproj.filters  Producer_i.h  Resource.h  framework.h  targetver.h  xdlldata.c  xdlldata.h
ComOutOfProcessRegFree/ProducerPS/: ProducerPS.vcxproj.filters
comInheritance/: com_sample.sln
comInheritance/AnimalConsumer/: AnimalConsumer.vcxproj  AnimalConsumer.vcxproj.filters  Manifest.xml  app.cpp  imports.h
comInheritance/AnimalProducer/: Animal.cpp  Animal.h  Animal.rgs  AnimalCrud.cpp  AnimalCrud.h  AnimalCrud.rgs  AnimalProducer.cpp  AnimalProducer.def  AnimalProducer.idl  AnimalProducer.rc  AnimalProducer.vcxproj  AnimalProducer.vcxproj.filters  AnimalProducer_i.h  Manifest.xml  dllmain.cpp  dllmain.h  framework.h  pch.cpp  pch.h  resource.h  targetver.h  xdlldata.c  xdlldata.h
comOutOfProcess/: .editorconfig  Example-Server-Manifest.xml  Readme.md
cpu-info-exe/: CMakeLists.txt  main.cpp
nuget_consumer/: nuget_consumer.sln
periodic_monitor/: .editorconfig.inferred  periodic_monitor.sln
string-test/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
tsmoreland_cpp20_demo/: .clang-format  tsmoreland_cpp20_demo.sln
tsmoreland_interop/: tsmoreland_interop.sln
(+83 files in other folders)
